syntax = "proto3";

package auth;

service AuthService {
    rpc CreateTokens(LoginRequest) returns (Tokens) {}
    rpc ValidateAuthToken(Token) returns (UserInfo) {}
    rpc RefreshAuthToken(Token) returns (Tokens) {}
    rpc DeleteRefreshToken(Token) returns (Empty) {}
}

message Token {
    string tokenString = 1;
}

message Tokens {
    Token authToken = 1;
    Token refreshToken = 2;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message UserInfo {
    string id = 1;
    string email = 2;
    string name = 3;

    map<string,string> roles = 4;
    map<string,string> permissions = 5;
}

message Empty {}